Making progress bar work.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,6 @@
     <string name="second_step_fourth_answer">Bobbiny t-shirt yarn</string>
 
     <string name="step_three">3. Type your dimensions:</string>
+
+    <string name="step_four">4. Test string, test string:</string>
 </resources>
