--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,20 +12,20 @@
     <string name="previous">Previous</string>
 
     <!-- Re-usable layouts -->
-    <string name="step_one">1. Choose your project:</string>
+    <string name="step_one">1. I want to knit:</string>
     <string name="first_step_first_answer">Rectangular rug</string>
     <string name="first_step_second_answer">Circular rug</string>
     <string name="first_step_third_answer">Basket</string>
     <string name="first_step_fourth_answer">Pillow</string>
     <string name="first_step_fifth_answer">Pouf</string>
 
-    <string name="step_two">2. Choose size and length of the cord:</string>
-    <string name="second_step_first_answer">Cotton cord Junior\n3mm</string>
-    <string name="second_step_second_answer">Cotton cord Premium\n5mm</string>
-    <string name="second_step_third_answer">Cotton cord Jumbo\n9mm</string>
+    <string name="step_two">2. I want to use:</string>
+    <string name="second_step_first_answer">Junior - 3mm</string>
+    <string name="second_step_second_answer">Premium - 5mm</string>
+    <string name="second_step_third_answer">Jumbo - 9mm</string>
     <string name="second_step_fourth_answer">Bobbiny t-shirt yarn</string>
 
-    <string name="step_three">3. Type your dimensions:</string>
+    <string name="step_three">3. Measurements:</string>
 
-    <string name="step_four">4. Test string, test string:</string>
+    <string name="step_four">4. What I need:</string>
 </resources>
