--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,31 +1,13 @@
 <resources>
     <string name="app_name">Calculator</string>
 
-    <!-- Starting (welcome) screen of the app -->
-    <string name="welcome">Welcome!</string>
-    <string name="company_motto">Coming soon</string>
-    <string name="start">Start</string>
+    <!-- Starting screen of the app -->
+    <string name="welcome_text">Welcome!</string>
+    <string name="motto_text">Sample text</string>
+    <string name="start_button">start</string>
 
-    <!-- Second screen app (main layout) -->
-    <string name="calculator_string">Calculator</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
-
-    <!-- Re-usable layouts -->
-    <string name="step_one">1. I want to knit:</string>
-    <string name="first_step_first_answer">Rectangular rug</string>
-    <string name="first_step_second_answer">Circular rug</string>
-    <string name="first_step_third_answer">Basket</string>
-    <string name="first_step_fourth_answer">Pillow</string>
-    <string name="first_step_fifth_answer">Pouf</string>
-
-    <string name="step_two">2. I want to use:</string>
-    <string name="second_step_first_answer">Junior - 3mm</string>
-    <string name="second_step_second_answer">Premium - 5mm</string>
-    <string name="second_step_third_answer">Jumbo - 9mm</string>
-    <string name="second_step_fourth_answer">Bobbiny t-shirt yarn</string>
-
-    <string name="step_three">3. Measurements:</string>
-
-    <string name="step_four">4. What I need:</string>
+    <!-- Image description -->
+    <string name="full_logo_description">Full logo of the company.</string>
+    <string name="step_image_description">Showing actual step.</string>
+    <string name="bookmark_image_description">Bookmark with logo.</string>
 </resources>
