--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,24 @@
     <string name="motto_text">Sample text</string>
     <string name="start_button">start</string>
 
+    <!-- ViewFlipper - Steps and answers -->
+    <string name="first_step">1. I want to knit:</string>
+    <string name="first_step_first_answer">Rectangular rug</string>
+    <string name="first_step_second_answer">Circular rug</string>
+    <string name="first_step_third_answer">Basket</string>
+    <string name="first_step_fourth_answer">Pillow</string>
+    <string name="first_step_fifth_answer">Pouf</string>
+
+    <string name="second_step">2. I want to use:</string>
+    <string name="second_step_first_answer">Junior - 3mm</string>
+    <string name="second_step_second_answer">Premium - 5mm</string>
+    <string name="second_step_third_answer">Jumbo - 9mm</string>
+    <string name="second_step_fourth_answer">Bobbiny t-shirt yarn</string>
+
+    <string name="third_step">3. Measurements:</string>
+
+    <string name="fourth_step">4. What I need:</string>
+
     <!-- Image description -->
     <string name="full_logo_description">Full logo of the company.</string>
     <string name="step_image_description">Showing actual step.</string>
