Adding arrows as buttons

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
     <string name="second_step_first_answer">Junior - 3mm</string>
     <string name="second_step_second_answer">Premium - 5mm</string>
     <string name="second_step_third_answer">Jumbo - 9mm</string>
-    <string name="second_step_fourth_answer">Bobbiny t-shirt yarn</string>
+    <string name="second_step_fourth_answer">T-shirt yarn</string>
 
     <string name="third_step">3. Measurements:</string>
 
@@ -30,4 +30,5 @@
     <string name="full_logo_description">Full logo of the company.</string>
     <string name="step_image_description">Showing actual step.</string>
     <string name="bookmark_image_description">Bookmark with logo.</string>
+    <string name="arrow_image_button">Button to switch step.</string>
 </resources>
